--- a/fileinput/examples/index.html
+++ b/fileinput/examples/index.html
@@ -8,8 +8,8 @@
         <link href="../css/fileinput.css" media="all" rel="stylesheet" type="text/css" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script src="../js/fileinput.js" type="text/javascript"></script>
-        <script src="../js/fileinput_locale_fr.js" type="text/javascript"></script>
-        <script src="../js/fileinput_locale_es.js" type="text/javascript"></script>
+        <!-- <script src="../js/fileinput_locale_fr.js" type="text/javascript"></script>
+        <script src="../js/fileinput_locale_es.js" type="text/javascript"></script> -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js" type="text/javascript"></script>
     </head>
     <body>
